--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   },
   "scripts": {
     "start": "./server.sh",
-    "build": "hugo --cleanDestinationDir -s . -d ./build",
+    "build": "hugo"
   }
 }
