--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "landing",
   "version": "1.0.0",
   "description": "app landing page",
-  "dependencies": {
-  },
   "devDependencies": {
-    "hugo-bin": "^0.89.0"
+    "hugo-bin": "^0.142.0"
   },
   "scripts": {
     "start": "./server.sh",
     "build": "hugo"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "hugo-bin"
+    ],
+    "onlyBuiltDependencies": [
+      "hugo-bin"
+    ]
   }
 }
